[metadata]
name = Varmkorv-EmasXP
version = 0.0.1
author = Magnus Karlsson
description = A proof-of-concept CherryPy inspired Python micro framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EmasXP/varmkorv
project_urls =
    Bug Tracker = https://github.com/EmasXP/varmkorv/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Web Environment
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src